--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Brian Bauska (bbauska)" />
   <meta name="title" content="UC at Davis' Interactivity with JS and jQuery" />
-  <meta name="description" content="UC at Davis - Interactivity with JavaScript and jQuery: 
-    The course objectives include how to identify objects in JavaScript;
-    how to create new objects and populate them with data; 
-    how to manipulate objects by adding, modifying and deleting data in objects; 
-    how to manipulate the DOM based on the data in objects; 
-    how to identify and articulate how multiple functions work together to create a more complex program; 
-    and, how to identify processes so as to break down larger programs into smaller, more manageable pieces." />
+  <meta name="description" content="University of California at Davis - Interactivity 
+    with JavaScript and jQuery: The course objectives include how to identify objects 
+	in JavaScript; how to create new objects and populate them with data; how to 
+	manipulate objects by adding, modifying and deleting data in objects; how to 
+	manipulate the DOM based on the data in objects; how to identify and articulate 
+	how multiple functions work together to create a more complex program; and, how 
+	to identify processes so as to break down larger programs into smaller, more 
+	manageable pieces." />
 
-  <title>University of California @Davis Interactivity with JavaScript and jQuery</title>
+  <title>UC @Davis Interactivity with JavaScript and jQuery</title>
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
@@ -89,26 +90,28 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ hoverable dropdown menu ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2><a href="#table-of-contents">Table of Contents</a></h2>
+
 <p id="table-of-contents"></p>
-<h3><strong>Week 1: jQuery Plugins and Capturing the Scroll Event</strong></h3>
+
+<h3><b>Week 1: jQuery Plugins and Capturing the Scroll Event</b></h3>
 
 <blockquote>
-  <h4><a href="#ch1-00"><strong>1.00 Welcome!</strong></a></h4>
-  <h4><a href="#ch1-01"><strong>1.01 Module 1 Introduction</strong></a></h4>
-  <h4><a href="#ch1-02"><strong>1.02 Intro to jQuery Plugins</strong></a></h4>
-  <h4><a href="#ch1-03"><strong>1.03 Using Plugins and Essential Steps</strong></a></h4>
-  <h4><a href="#ch1-04"><strong>1.04 Gotchas and Rookie Mistakes</strong></a></h4>
+  <h4><a href="#ch1-00"><b>1.00 Welcome!</b></a></h4>
+  <h4><a href="#ch1-01"><b>1.01 Module 1 Introduction</b></a></h4>
+  <h4><a href="#ch1-02"><b>1.02 Intro to jQuery Plugins</b></a></h4>
+  <h4><a href="#ch1-03"><b>1.03 Using Plugins and Essential Steps</b></a></h4>
+  <h4><a href="#ch1-04"><b>1.04 Gotchas and Rookie Mistakes</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
     alt="1.04 jQuery Plugins (pdf)." 
     target="_blank" rel="noreferrer noopener">
-	1.04 jQuery Plugins (pdf)</a></li>
+	1.04 jQuery Plugins (pdf)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     alt="1.04 Flex Slider Basic START (zip download)." 
     target="_blank" rel="noopener noreferrer">
-	1.04 Flex Slider Basic START (zip download)</a></li>
+	1.04 Flex Slider Basic START (zip download)</a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     alt="1.04 Flex Slider Plugin (zip download)." 
     target="_blank" rel="noopener noreferrer">
@@ -116,28 +119,28 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch1-05"><strong>1.05 FlexSlider: A jQuery Plugin</strong></a></h4>
-  <h4><a href="#ch1-06"><strong>1.06 About the Minified Version</strong></a></h4>
-  <h4><a href="#ch1-07"><strong>1.07 Adding Markup &amp; Hooking Up the Slider</strong></a></h4>
-  <h4><a href="#ch1-08"><strong>1.08 FlexSlider Rules</strong></a></h4>
-  <h4><a href="#ch1-09"><strong>1.09 Additional Controls</strong></a></h4>
-  <h4><a href="#ch1-10"><strong>1.10 Advanced FlexSlider</strong></a></h4>
-  <h4><a href="#ch1-11"><strong>1.11 Additional Styling</strong></a></h4>
-  <h4><a href="#ch1-12"><strong>1.12 Styling the CTA</strong></a></h4>
+  <h4><a href="#ch1-05"><b>1.05 FlexSlider: A jQuery Plugin</b></a></h4>
+  <h4><a href="#ch1-06"><b>1.06 About the Minified Version</b></a></h4>
+  <h4><a href="#ch1-07"><b>1.07 Adding Markup &amp; Hooking Up the Slider</b></a></h4>
+  <h4><a href="#ch1-08"><b>1.08 FlexSlider Rules</b></a></h4>
+  <h4><a href="#ch1-09"><b>1.09 Additional Controls</b></a></h4>
+  <h4><a href="#ch1-10"><b>1.10 Advanced FlexSlider</b></a></h4>
+  <h4><a href="#ch1-11"><b>1.11 Additional Styling</b></a></h4>
+  <h4><a href="#ch1-12"><b>1.12 Styling the CTA</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
     alt="1.12 jQuery Flex Slider Plugin (pdf)." 
     target="_blank" rel="noreferrer noopener">
-    <strong>1.12 jQuery Flex Slider Plugin (pdf)</strong></a></li>
+    <b>1.12 jQuery Flex Slider Plugin (pdf)</b></a></li>
 </ul>
 
-<h3><strong>Week 2: Combining Scripts and Skill Building Through Practice</strong></h3>
+<h3><b>Week 2: Combining Scripts and Skill Building Through Practice</b></h3>
 
 <blockquote>
-  <h4><a href="#ch2-01"><strong>2.01 Module 2 Introduction</strong></a></h4>
-  <h4><a href="#ch2-02"><strong>2.02 Intro to Smooth Scroll with jQuery</strong></a></h4>
+  <h4><a href="#ch2-01"><b>2.01 Module 2 Introduction</b></a></h4>
+  <h4><a href="#ch2-02"><b>2.02 Intro to Smooth Scroll with jQuery</b></a></h4>
 </blockquote>
 
 <ul>
@@ -148,32 +151,32 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch2-03"><strong>2.03 Creating a Click Handler</strong></a></h4>
-  <h4><a href="#ch2-04"><strong>2.04 Adding the Animation</strong></a></h4>
-  <h4><a href="#ch2-05"><strong>2.05 Add Some Easing and a Callback Function</strong></a></h4>
-  <h4><a href="#ch2-06"><strong>2.06 Highlighting Elements</strong></a></h4>
-  <h4><a href="#ch2-07"><strong>2.07 Intro to Page Location Tracking</strong></a></h4>
-  <h4><a href="#ch2-08"><strong>2.08 The Crux of the Problem</strong></a></h4>
-  <h4><a href="#ch2-09"><strong>2.09 Strategy</strong></a></h4>
-  <h4><a href="#ch2-11"><strong>2.10 Adding PageTop and If Statements</strong></a></h4>
-  <h4><a href="#ch2-11"><strong>2.11 Writing the Else/If Statement - Part 1</strong></a></h4>
-  <h4><a href="#ch2-12"><strong>2.12 Writing the Else/If Statement - Part 2</strong></a></h4>
-  <h4><a href="#ch2-13"><strong>2.13 Edge Case Issues</strong></a></h4>
-  <h4><a href="#ch2-14"><strong>2.14 Resizing the Counter</strong></a></h4>
-  <h4><a href="#ch2-15"><strong>2.15 Resetting the Counter</strong></a></h4>
-  <h4><a href="#ch2-16"><strong>2.16 resetPagePosition Function</strong></a></h4>
-  <h4><a href="#ch2-17"><strong>2.17 Reviewing the Whole Script</strong></a></h4>
+  <h4><a href="#ch2-03"><b>2.03 Creating a Click Handler</b></a></h4>
+  <h4><a href="#ch2-04"><b>2.04 Adding the Animation</b></a></h4>
+  <h4><a href="#ch2-05"><b>2.05 Add Some Easing and a Callback Function</b></a></h4>
+  <h4><a href="#ch2-06"><b>2.06 Highlighting Elements</b></a></h4>
+  <h4><a href="#ch2-07"><b>2.07 Intro to Page Location Tracking</b></a></h4>
+  <h4><a href="#ch2-08"><b>2.08 The Crux of the Problem</b></a></h4>
+  <h4><a href="#ch2-09"><b>2.09 Strategy</b></a></h4>
+  <h4><a href="#ch2-11"><b>2.10 Adding PageTop and If Statements</b></a></h4>
+  <h4><a href="#ch2-11"><b>2.11 Writing the Else/If Statement - Part 1</b></a></h4>
+  <h4><a href="#ch2-12"><b>2.12 Writing the Else/If Statement - Part 2</b></a></h4>
+  <h4><a href="#ch2-13"><b>2.13 Edge Case Issues</b></a></h4>
+  <h4><a href="#ch2-14"><b>2.14 Resizing the Counter</b></a></h4>
+  <h4><a href="#ch2-15"><b>2.15 Resetting the Counter</b></a></h4>
+  <h4><a href="#ch2-16"><b>2.16 resetPagePosition Function</b></a></h4>
+  <h4><a href="#ch2-17"><b>2.17 Reviewing the Whole Script</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
     alt="2.17 jQuery Page Location Tracking (pdf)." 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.17 jQuery Page Location Tracking (pdf)</strong></a></li>
+    <b>2.17 jQuery Page Location Tracking (pdf)</b></a></li>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch2-18"><strong>2.18 Intro to Scroll Effects with JS</strong></a></h4>
+  <h4><a href="#ch2-18"><b>2.18 Intro to Scroll Effects with JS</b></a></h4>
 </blockquote>
 
 <ul>
@@ -184,16 +187,16 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch2-19"><strong>2.19 Getting the Target - Part 1</strong></a></h4>
-  <h4><a href="#ch2-20"><strong>2.20 Getting the Target - Part 2</strong></a></h4>
-  <h4><a href="#ch2-21"><strong>2.21 Smooth Scroll Polyfill</strong></a></h4>
-  <h4><a href="#ch2-22"><strong>2.22 Checking the Load</strong></a></h4>
-  <h4><a href="#ch2-23"><strong>2.23 Top Posts</strong></a></h4>
-  <h4><a href="#ch2-24"><strong>2.24 Add an Event Listener</strong></a></h4>
-  <h4><a href="#ch2-25"><strong>2.25 The Magic Conditionals</strong></a></h4>
-  <h4><a href="#ch2-26"><strong>2.26 Changing the Next Link</strong></a></h4>
-  <h4><a href="#ch2-27"><strong>2.27 Resizing Function</strong></a></h4>
-  <h4><a href="#ch2-28"><strong>2.28 Finalizing the Script</strong></a></h4>
+  <h4><a href="#ch2-19"><b>2.19 Getting the Target - Part 1</b></a></h4>
+  <h4><a href="#ch2-20"><b>2.20 Getting the Target - Part 2</b></a></h4>
+  <h4><a href="#ch2-21"><b>2.21 Smooth Scroll Polyfill</b></a></h4>
+  <h4><a href="#ch2-22"><b>2.22 Checking the Load</b></a></h4>
+  <h4><a href="#ch2-23"><b>2.23 Top Posts</b></a></h4>
+  <h4><a href="#ch2-24"><b>2.24 Add an Event Listener</b></a></h4>
+  <h4><a href="#ch2-25"><b>2.25 The Magic Conditionals</b></a></h4>
+  <h4><a href="#ch2-26"><b>2.26 Changing the Next Link</b></a></h4>
+  <h4><a href="#ch2-27"><b>2.27 Resizing Function</b></a></h4>
+  <h4><a href="#ch2-28"><b>2.28 Finalizing the Script</b></a></h4>
 </blockquote>
 
 <ul>
@@ -204,7 +207,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch2-29"><strong>2.29 Scription Site Introduction</strong></a></h4>
+  <h4><a href="#ch2-29"><b>2.29 Scription Site Introduction</b></a></h4>
 </blockquote>
 
 <ul>
@@ -231,16 +234,16 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch2-30"><strong>2.30 Header HTML</strong></a></h4>
-  <h4><a href="#ch2-31"><strong>2.31 Pricing Styling</strong></a></h4>
-  <h4><a href="#ch2-32"><strong>2.32 Beginning Styling</strong></a></h4>
-  <h4><a href="#ch2-33"><strong>2.33 Styling That Attaches to Whole Page</strong></a></h4>
-  <h4><a href="#ch2-34"><strong>2.34 Slider Styles</strong></a></h4>
-  <h4><a href="#ch2-35"><strong>2.35 Pricing Styles</strong></a></h4>
-  <h4><a href="#ch2-36"><strong>2.36 Tables Styles</strong></a></h4>
-  <h4><a href="#ch2-37"><strong>2.37 Media Query for 1020 Pixels Wide</strong></a></h4>
-  <h4><a href="#ch2-38"><strong>2.38 Media Query for 1200 Pixels Wide</strong></a></h4>
-  <h4><a href="#ch2-39"><strong>2.39 Scription Site: Building Interactive Elements Challenges</strong></a></h4>
+  <h4><a href="#ch2-30"><b>2.30 Header HTML</b></a></h4>
+  <h4><a href="#ch2-31"><b>2.31 Pricing Styling</b></a></h4>
+  <h4><a href="#ch2-32"><b>2.32 Beginning Styling</b></a></h4>
+  <h4><a href="#ch2-33"><b>2.33 Styling That Attaches to Whole Page</b></a></h4>
+  <h4><a href="#ch2-34"><b>2.34 Slider Styles</b></a></h4>
+  <h4><a href="#ch2-35"><b>2.35 Pricing Styles</b></a></h4>
+  <h4><a href="#ch2-36"><b>2.36 Tables Styles</b></a></h4>
+  <h4><a href="#ch2-37"><b>2.37 Media Query for 1020 Pixels Wide</b></a></h4>
+  <h4><a href="#ch2-38"><b>2.38 Media Query for 1200 Pixels Wide</b></a></h4>
+  <h4><a href="#ch2-39"><b>2.39 Scription Site: Building Interactive Elements Challenges</b></a></h4>
 </blockquote>
 
 <ul>
@@ -254,11 +257,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 	2.39 Scription Site Part 2 Interchange Challenges (pdf)</a></li>
 </ul>
 
-<h3><strong>Week 3. Intro to Objects and Data in JavaScript</strong></h3>
+<h3><b>Week 3. Intro to Objects and Data in JavaScript</b></h3>
 
 <blockquote>
-  <h4><a href="#ch3-01"><strong>3.01 Module 3 Introduction</strong></a></h4>
-  <h4><a href="#ch3-02"><strong>3.02 Intro to Objects and Data in JS</strong></a></h4>
+  <h4><a href="#ch3-01"><b>3.01 Module 3 Introduction</b></a></h4>
+  <h4><a href="#ch3-02"><b>3.02 Intro to Objects and Data in JS</b></a></h4>
 </blockquote>
 
 <ul>
@@ -269,11 +272,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch3-03"><strong>3.03 Objects Can Contain Arrays and Other Objects</strong></a></h4>
-  <h4><a href="#ch3-04"><strong>3.04 Functions Inside Objects Equals Methods</strong></a></h4>
-  <h4><a href="#ch3-05"><strong>3.05 Putting Objects and Functions Together</strong></a></h4>
-  <h4><a href="#ch3-06"><strong>3.06 Data Formats - XML</strong></a></h4>
-  <h4><a href="#ch3-07"><strong>3.07 Example File</strong></a></h4>
+  <h4><a href="#ch3-03"><b>3.03 Objects Can Contain Arrays and Other Objects</b></a></h4>
+  <h4><a href="#ch3-04"><b>3.04 Functions Inside Objects Equals Methods</b></a></h4>
+  <h4><a href="#ch3-05"><b>3.05 Putting Objects and Functions Together</b></a></h4>
+  <h4><a href="#ch3-06"><b>3.06 Data Formats - XML</b></a></h4>
+  <h4><a href="#ch3-07"><b>3.07 Example File</b></a></h4>
 </blockquote>
 
 <ul>
@@ -288,34 +291,34 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch3-08"><strong>3.08 Intro to Pig Dice Game</strong></a></h4>
+  <h4><a href="#ch3-08"><b>3.08 Intro to Pig Dice Game</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/3.08-PigDiceGame-Diagrams.pdf" 
     alt="3.08 Pig Dice Game Diagrams (pdf)."
     target="_blank" rel="noreferrer noopener">
-    <strong>3.08 Pig Dice Game Diagrams (pdf)</strong></a></li>
+    <b>3.08 Pig Dice Game Diagrams (pdf)</b></a></li>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch3-09"><strong>3.09 Play the Game of Pig</strong></a></h4>
-  <h4><a href="#ch3-10"><strong>3.10 Version One</strong></a></h4>
-  <h4><a href="#ch3-11"><strong>3.11 Other Versions</strong></a></h4>
+  <h4><a href="#ch3-09"><b>3.09 Play the Game of Pig</b></a></h4>
+  <h4><a href="#ch3-10"><b>3.10 Version One</b></a></h4>
+  <h4><a href="#ch3-11"><b>3.11 Other Versions</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/3.11-Intro-Pig-Dice-Game.pdf" 
     alt="3.11 Introduction to the Pig Dice Game (pdf)."
     target="_blank" rel="noreferrer noopener">
-    <strong>3.11 Introduction to the Pig Dice Game (pdf)</strong></a></li>
+    <b>3.11 Introduction to the Pig Dice Game (pdf)</b></a></li>
 </ul>
 
-<h3><strong>Week 4. Building a Simple Game in JavaScript</strong></h3>
+<h3><b>Week 4. Building a Simple Game in JavaScript</b></h3>
 
 <blockquote>
-  <h4><a href="#ch4-01"><strong>4.01 Module 4 Introduction</strong></a></h4>
-  <h4><a href="#ch4-02"><strong>4.02 Intro to the Game of Pig</strong></a></h4>
+  <h4><a href="#ch4-01"><b>4.01 Module 4 Introduction</b></a></h4>
+  <h4><a href="#ch4-02"><b>4.02 Intro to the Game of Pig</b></a></h4>
 </blockquote>
 
 <ul>
@@ -326,29 +329,29 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch4-03"><strong>4.03 Start the Game</strong></a></h4>
-  <h4><a href="#ch4-04"><strong>4.04 Set Up the Turn</strong></a></h4>
-  <h4><a href="#ch4-02"><strong>4.05 Throwing the Dice</strong></a></h4>
-  <h4><a href="#ch4-06"><strong>4.06 Test Throwing the Dice</strong></a></h4>
-  <h4><a href="#ch4-07"><strong>4.07 Add the Selection Statements</strong></a></h4>
-  <h4><a href="#ch4-08"><strong>4.08 Snake Eyes</strong></a></h4>
-  <h4><a href="#ch4-09"><strong>4.09 A “1” Was Rolled</strong></a></h4>
-  <h4><a href="#ch4-10"><strong>4.10 The Else Statement</strong></a></h4>
-  <h4><a href="#ch4-11"><strong>4.11 Checking for a Win</strong></a></h4>
-  <h4><a href="#ch4-12"><strong>4.12 Show the Current Score</strong></a></h4>
-  <h4><a href="#ch4-13"><strong>4.13 Final Clean-Up</strong></a></h4>
-  <h4><a href="#ch4-14"><strong>4.14 Extending the Game</strong></a></h4>
+  <h4><a href="#ch4-03"><b>4.03 Start the Game</b></a></h4>
+  <h4><a href="#ch4-04"><b>4.04 Set Up the Turn</b></a></h4>
+  <h4><a href="#ch4-02"><b>4.05 Throwing the Dice</b></a></h4>
+  <h4><a href="#ch4-06"><b>4.06 Test Throwing the Dice</b></a></h4>
+  <h4><a href="#ch4-07"><b>4.07 Add the Selection Statements</b></a></h4>
+  <h4><a href="#ch4-08"><b>4.08 Snake Eyes</b></a></h4>
+  <h4><a href="#ch4-09"><b>4.09 A “1” Was Rolled</b></a></h4>
+  <h4><a href="#ch4-10"><b>4.10 The Else Statement</b></a></h4>
+  <h4><a href="#ch4-11"><b>4.11 Checking for a Win</b></a></h4>
+  <h4><a href="#ch4-12"><b>4.12 Show the Current Score</b></a></h4>
+  <h4><a href="#ch4-13"><b>4.13 Final Clean-Up</b></a></h4>
+  <h4><a href="#ch4-14"><b>4.14 Extending the Game</b></a></h4>
 </blockquote>
 
 <ul>
   <li><a href="./pdf/4.14-GameofPig.pdf" 
     alt="4.14 Game of Pig (pdf)."
     target="_blank" rel="noreferrer noopener"> 
-    <strong>4.14 Game of Pig (pdf)</strong></a></li>
+    <b>4.14 Game of Pig (pdf)</b></a></li>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch4-15"><strong>4.15 Course Summary</strong></a></h4>
+  <h4><a href="#ch4-15"><b>4.15 Course Summary</b></a></h4>
 </blockquote>
 
 <h2>Syllabus</h2>
@@ -381,13 +384,13 @@ image sliders.</p>
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>1.04 jQuery Plugins (pdf)</strong></a><br><br></li>
+    <b>1.04 jQuery Plugins (pdf)</b></a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     target="_blank" rel="noopener noreferrer">
-    <strong>1.04 FlexSlider Basic START (zip download)</strong></a><br><br></li>
+    <b>1.04 FlexSlider Basic START (zip download)</b></a><br><br></li>
   <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     target="_blank" rel="noopener noreferrer">
-    <strong>1.04 FlexSlider Plugin (zip download)</strong></a></li>
+    <b>1.04 FlexSlider Plugin (zip download)</b></a></li>
 </ul>
 
 <ol start="6" type="1">
@@ -405,7 +408,7 @@ image sliders.</p>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
     alt="1.12 jQuery Flex Slider Plugin (pdf)."
     target="_blank" rel="noopener noreferrer">
-    <strong>1.12 jQuery Flex Slider Plugin (pdf)</strong></a></li>
+    <b>1.12 jQuery Flex Slider Plugin (pdf)</b></a></li>
 </ul>
 
 <h3>Module (Week) Two:</h3>
@@ -11734,6 +11737,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Prior Updated 5/8/2024 10+ pm</h6>
 <h6>Prior Updated 5/17/2024 10+ am</h6>
 <h6>Last Updated 5/23/2024 4+ pm</h6>
+<h6>Last Updated 5/31/2024 11+ am</h6>
 
 </body>
 </html>
