--- a/index.html
+++ b/index.html
@@ -9871,7 +9871,7 @@ functionality you need for each piece.</p>
   <li><b><a href="./pdf/3.11 Intro-to-Pig-Dice-Games.pdf" 
     alt="3.11 Introduction to the Pig Dice Game (pdf)."
     target="_blank" rel="noreferrer noopener">
-    3.11 Intro to Pig Dice Game (pdf)</a></b></li
+    3.11 Intro to Pig Dice Game (pdf)</a></b></li>
 </ul>
 
 <blockquote>
@@ -10488,7 +10488,7 @@ to, I'm just going to leave it like that, that's fine. We've added that image an
 that's the image for our first roll. We need an image for our second roll, which 
 is going to look exactly like this, except, that this is now roll 2. Then the 
 last thing that we need to do is add up these two rolls together and put them in
-their sum total. <b>GameData.rollSum</b>, that one there, is going to equal 
+their sum total. <b>gameData.rollSum</b>, that one there, is going to equal 
 <b>gameData.roll1</b> plus <b>gameData.roll2</b>, and that will add those up and 
 put them in there. Great. We're going to test this in the next lesson.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -10812,7 +10812,7 @@ should work.</p>
   src="./images/image635.png"
   loading="lazy"
   style="width:50%"
-  title="Test, gameData.rollSum." />
+  title="Test, gameData.rollSum"
   alt="Test, gameData.rollSum." />
 
 <p>Now, if we wanted to test this before we go forward, it might be a good
@@ -10848,7 +10848,7 @@ the dice for player 2, let's try that again.</p>
 time, but it's switched into 2, 2 announces roll the dice for player 1.
 So you can see that it's actually changing the player, waiting 2 seconds
 and changing the player, so that's actually working, which is great. Now
-remove console gamedata.rollsum = 2 which was hard-coded for testing the
+remove console gameData.rollSum = 2 which was hard-coded for testing the
 switch players function.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch4-09">4.09 A “1” Was Rolled (5:19)</h2>
@@ -11728,15 +11728,6 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <p>..the end…</p>
 
 <h6>Prior Update 1/30/2024 9:07pm</h6>
-<h6>Prior Updated 3/23/2024 7+ am</h6>
-<h6>Prior Updated 3/23/2024 3+ pm</h6>
-<h6>Prior Updated 3/24/2024 5+ pm</h6>
-<h6>Prior Updated 3/30/2024 3+ pm</h6>
-<h6>Prior Updated 4/25/2024 11+ pm</h6>
-<h6>Prior Updated 5/5/2024 4+ pm</h6>
-<h6>Prior Updated 5/8/2024 10+ pm</h6>
-<h6>Prior Updated 5/17/2024 10+ am</h6>
-<h6>Last Updated 5/23/2024 4+ pm</h6>
 <h6>Last Updated 5/31/2024 11+ am</h6>
 
 </body>
