--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Brian Bauska (bbauska)" />
-  <meta name="title" content="UC at Davis' Interactivity with JS and jQuery" />
+  <meta name="title" content="UC @Davis' Interactivity with JS and jQuery" />
   <meta name="description" content="University of California at Davis - Interactivity 
     with JavaScript and jQuery: The course objectives include how to identify objects 
 	in JavaScript; how to create new objects and populate them with data; how to 
@@ -19,7 +19,7 @@
 	to identify processes so as to break down larger programs into smaller, more 
 	manageable pieces." />
 
-  <title>UC @Davis Interactivity with JavaScript and jQuery</title>
+  <title>UC @Davis' Interactivity with JavaScript and jQuery</title>
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
@@ -60,12 +60,12 @@
 
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery & javascript logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border"
+<img class="displayed"
   src="./images/image001.png"
   style="width:30%; float: left; margin-left: 20%; margin-bottom: 1em;"
   title="jQuery and JavaScript logo"
   alt="jQuery and JavaScript logo." />
-<img class="border"
+<img class="displayed"
   src="./images/image002.png"
   style="width:20%; float: left; margin-left: 10%; margin-bottom: 1em;"
   title="University of California @Davis logo"
@@ -266,8 +266,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./zip/3.02-JS-Objects-START.zip" 
-    target="_blank" rel="noreferrer noopener" 
-	alt="3.02 JavaScript Objects START (zip download).">
+    aria-label="3.02 JavaScript Objects START."
+    target="_blank" rel="noreferrer noopener">
 	3.02 JS Objects START (zip download)</a></li>
 </ul>
 
@@ -393,7 +393,7 @@ image sliders.</p>
     <b>1.04 FlexSlider Plugin (zip download)</b></a></li>
 </ul>
 
-<ol start="6" type="1">
+<ol start="5" type="1">
   <li>FlexSlider: A jQuery Plugin</li>
   <li>About the Minified Version</li>
   <li>Adding Markup &amp; Hooking Up the Slider</li>
@@ -569,7 +569,7 @@ problem down into smaller pieces.</p>
 
 <ul>
   <li><a href="./zip/3.02-JS-Objects-START.zip" 
-    alt="3.02 JavaScript Objects START (zip download)."
+    aria-label="3.02 JavaScript Objects START (zip download)."
     target="_blank" rel="noreferrer noopener">
     3.02 JS Objects START (zip download)</li>
 </ul>
@@ -939,12 +939,12 @@ each time.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch1-04">1.04 Gotchas and Rookie Mistakes (8:52)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~ 13. gotchas and rookie mistakes (1.05) (16) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~ 13. gotchas and rookie mistakes (1.04) (16) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image013.png"
   loading="lazy"
-  title="1.05 Gotchas and Rookie Mistakes, #1"
-  alt="1.05 Gotchas and Rookie Mistakes, #1."
+  title="1.04 Gotchas and Rookie Mistakes, #1"
+  alt="1.04 Gotchas and Rookie Mistakes, #1."
   style="width:40%;" />
 <br><br>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -1094,13 +1094,13 @@ for a future as a JavaScript developer.</p>
 
 <p>Here is a PDF of the presentation slides used in the lessons for this section:</p>
 
-<h4 id="ch1-05-pdf">jQuery Plugins PDF Files</h4>
+<h4 id="ch1-04-pdf">jQuery Plugins PDF Files</h4>
 
 <ul>
-  <li><a href="./pdf/1.05-jQuery-Plugins.pdf" 
-    alt="1.05 jQuery Plugins (pdf)."
+  <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
+    alt="1.04 jQuery Plugins (pdf)."
     target="_blank" rel="noreferrer noopener">
-	1.05 jQuery Plugins (pdf)</a></li>
+	1.04 jQuery Plugins (pdf)</a></li>
 </ul>
 
 <p>Attached is a zip file of the things you need to begin this exercise.
@@ -1108,17 +1108,17 @@ A <b>zip file</b> is defined as: a computer file whose contents include
 one or more files that are compressed for storage or transmission, often
 carrying the extension .ZIP.</p>
 
-<h4 id="ch1-05-zip">jQuery FlexSlider Plugins START zip Files</h4>
+<h4 id="ch1-04-zip">jQuery FlexSlider Plugins START zip Files</h4>
 
 <ul>
-  <li><a href="./zip_files/1.05-FlexSliderBasic-START.zip" 
-    alt="1.05 Flex Slider Basic START (zip download)."
+  <li><a href="./zip_files/1.04-FlexSliderBasic-START.zip" 
+    alt="1.0 Flex Slider Basic START (zip download)."
     target="_blank" rel="noopener noreferrer">
-	1.05 Flex Slider Basic START (zip download)</a>
+	1.04 Flex Slider Basic START (zip download)</a>
   </li>
-  <li><a href="./zip_files/1.05-FlexSliderPlugin.zip"
+  <li><a href="./zip_files/1.04-FlexSliderPlugin.zip"
     target="_blank" rel="noopener noreferrer">
-	1.05 Flex Slider Plugin (zip download)</a>
+	1.04 Flex Slider Plugin (zip download)</a>
   </li>
 </ul>
 
@@ -8795,6 +8795,7 @@ transmission, often carrying the extension .ZIP.</p>
 
 <ul>
   <li><a href="./zip/3.02-JSON-Examples-HTML.zip" 
+  aria-label="3.02 JSON Examples HTML."
   alt="3.02 JSON Examples HTML (zip download)."
   target="_blank" rel="noopener noreferrer">
   3.02 JSON Examples HTML (zip download)</a></li>
